# py-discord-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
ai/: __init__.py
ai/services/: __init__.py  gemini.py
assistant/: __init__.py  cog.py
assistant/commands/: __init__.py  ask.py
assistant/services/: __init__.py  ask.py
cogs/: __init__.py  assistant.py  general.py  music.py  system.py
core/: __init__.py  bot.py  config.py  container.py  context.py  logger.py
domain/: __init__.py  ai_interface.py  music_interface.py
general/: __init__.py  cog.py
general/commands/: __init__.py  help.py
general/services/: __init__.py  help.py
general/ui/: __init__.py  help.py
music/: __init__.py  cog.py  context.py  player.py
music/commands/: __init__.py  ask.py  clear.py  cutin.py  gg.py  help.py  jump.py  loop.py  lyrics.py  mute.py  nowplaying.py  pause.py  playat.py  player.py  playplaylist.py  previous.py  progress.py  queue.py  quick.py  remove.py  resume.py  saveplaylist.py  seek.py  shuffle.py  skip.py  song.py  stop.py  sysinfo.py  unmute.py  voldown.py  volume.py  volumecheck.py  volup.py
music/services/: __init__.py  gemini.py  loop.py  lyrics.py  playback.py  playback_controls.py  playlists.py  queue_actions.py  status.py  volume.py  youtube.py
music/ui/: __init__.py  controls.py  help.py  song_select.py
music/utils/: __init__.py  time.py
services/: __init__.py  gemini_service.py  youtube_service.py
system/: __init__.py  cog.py
system/commands/: __init__.py  sysinfo.py
system/services/: __init__.py  sysinfo.py
