[project]
name = "py-discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "sun",email = "sun@mywonder.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs (==2.6.2)",
    "aiohttp (==3.13.5)",
    "aiosignal (==1.4.0)",
    "attrs (==26.1.0)",
    "audioop-lts (==0.2.2)",
    "cffi (==2.0.0)",
    "discord-py (==2.7.1)",
    "frozenlist (==1.8.0)",
    "idna (==3.16)",
    "multidict (==6.7.1)",
    "propcache (==0.5.2)",
    "psutil (==7.2.2)",
    "pycparser (==3.0)",
    "pynacl (==1.6.2)",
    "python-dotenv (==1.2.2)",
    "watchdog (==6.0.0)",
    "yarl (==1.24.2)",
    "yt-dlp (==2026.3.17)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
